[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Entities/square.png" type="Texture" id=1]
[ext_resource path="res://Script/Entities/Player/PlayerController.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 7 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 8 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 2 )
drag = 2.5
rotation_speed = 4.0
rate_of_fire = 10

[node name="Sprite" type="Sprite" parent="." groups=[
"player",
]]
position = Vector2( -1, 0 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"player",
]]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="." groups=[
"player",
]]
wait_time = 0.01
one_shot = true

[node name="HitDetection" type="Area2D" parent="." groups=[
"player",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetection" groups=[
"player",
]]
shape = SubResource( 2 )

[node name="HitTimer" type="Timer" parent="." groups=[
"player",
]]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="HitDetection" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
